<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_blue"
    android:padding="@dimen/padding_medium"
    tools:context=".ActivityA">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_a"
        android:gravity="center_horizontal"
        android:textSize="@dimen/font_large"
        android:textColor="@color/light_blue"
        android:paddingBottom="@dimen/padding_large"/>
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_start_b"
        android:text="@string/btn_start_b_label"
        android:onClick="startActivityB"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_start_c"
        android:text="@string/btn_start_c_label"
        android:onClick="startActivityC"
        android:layout_toRightOf="@id/btn_start_b"
        />

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/btn_finish_a"
    android:text="@string/btn_finish_a_label"
    android:onClick="finishtActivityA"
    android:layout_toRightOf="@id/btn_start_c"
    />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_star_dialog"
        android:text="@string/btn_start_dialog_label"
        android:onClick="startDialog"
        android:layout_toRightOf="@id/btn_finish_a"
        />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_medium"
        android:text="@string/ciclodevida_lista_metodos"
        android:textColor="@color/light_blue"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/status_view_a"
            android:background="@color/white"
            android:textColor="@color/black"
            android:padding="@dimen/padding_small"
            android:typeface="monospace"/>

    </ScrollView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_medium"
        android:text="@string/status_atividade"
        android:textColor="@color/light_blue"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/status_view_all_a"
        android:background="@color/white"
        android:textColor="@color/black"
        android:padding="@dimen/padding_small"
        android:typeface="monospace"/>

</LinearLayout>